2012-12-05 Ben Rardin <rardinb@live.unc.edu>
	*dmbr_report_cell_expt: added force response values to the html file that the function generates.

2012-10-24 Ben Rardin <rardinb@live.unc.edu>
	*dmbr_multi_file_report: bug fixed. The excel report created by the GUI now generates the correct "G ratios" when data has been filtered  (removal of certain beads, pulls, etc.) and re-run in the multifilereport GUI.

2012-10-08 Ben Rardin <rardinb@live.unc.edu>
	* dmbr_mf_concat: bug fixed. No longer is necessary to delete end of file characters in the created seqdat.txt file

2012-10-04 Christian Stith <chstith@ncsu.edu>
	* dmbr_mf_concat: added. concatenates multiple *.seqdat.txt files into one. functional; known bug described in header.

2012-08-13 Christian Stith <chstith@ncsu.edu>
	* multi_file_report_readme.txt: added. comprehensive MFR user guide.
	* dmbr_adjust_report.m: finalized comment header.
	* dmbr_multi_file_report.m: same.
	* dmbr_report_cell_expt.m: same.

2012-08-13 Christian Stith <chstith@ncsu.edu>
	* dmbr_run.m: added sequence selector functionality. conditionally implemented, should not affect unrelated activities.
	* dmbr_report_cell_expt.m: modified dmbr_run call.

2012-08-13 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: fixed Excel analysis generation bug.
	* dmbr_report_cell_expt.m: added cosmetic plot changes. rationalized plot naming system.

2012-08-12 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: added filtering functionality to initial file selection process.

2012-08-12 Christian Stith <chstith@ncsu.edu>
	* dmbr_adjust_report.m: updated to remove deselected files and beads. improved figure closing.
	* dmbr_analysis_gui.fig: added Power Law (Fabry) model.
	* dmbr_fit.m: added Power Law (Fabry) model.
	* dmbr_multi_file_report.m: improved file sorting and main directory tracking. generalized excel analysis output format. added Power Law (Fabry) Model.