@@ -1,3 +1,7 @@
+2013-02-01 Christian Stith <chstith@ncsu.edu>
+	* dmbr_multi_file_report.m: implemented functionality for g ratios in the html report, along with the option for this in the gui.
+	* dmbr_report_cell_expt.m: same.
+
 2012-12-05 Ben Rardin <rardinb@live.unc.edu>
 	*dmbr_report_cell_expt: added force response values to the html file that the function generates.
 
